--- a/MvcFlash.Core/MvcFlash.Core.csproj
+++ b/MvcFlash.Core/MvcFlash.Core.csproj
@@ -73,7 +73,7 @@
     <Compile Include="..\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="MvcFlash.cs" />
+    <Compile Include="Flash.cs" />
     <Compile Include="Extensions\FlashPusherExtensions.cs" />
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
     <Compile Include="FlashSettings.cs" />
