can now unit test filter attributes, how about that?!

--- a/MvcFlash.Tests/MvcFlash.Tests.csproj
+++ b/MvcFlash.Tests/MvcFlash.Tests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="ConfigurationTests.cs" />
     <Compile Include="ExtensionTests.cs" />
     <Compile Include="Fakes.cs" />
+    <Compile Include="FilterTests.cs" />
     <Compile Include="FlashApiTests.cs" />
   </ItemGroup>
   <ItemGroup>
