--- a/MvcFlash.Sample/Web.config
+++ b/MvcFlash.Sample/Web.config
@@ -11,6 +11,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="MvcFlash.RavenDb" connectionString="Url=http://localhost:8080;DefaultDatabase=MvcFlash;"/>
+  </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
