--- a/MvcFlash.Core/MvcFlash.Core.csproj
+++ b/MvcFlash.Core/MvcFlash.Core.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.Helpers.dll</HintPath>
@@ -83,6 +84,7 @@
     <Compile Include="IFlashMessenger.cs" />
     <Compile Include="Messages\MessageBase.cs" />
     <Compile Include="Messages\SimpleMessage.cs" />
+    <Compile Include="Providers\CookieStorageFlashMessenger.cs" />
     <Compile Include="Providers\FlashMessengerBase.cs" />
     <Compile Include="Providers\HttpSessionFlashMessenger.cs" />
     <Compile Include="Providers\InMemoryFlashMessenger.cs" />
