--- a/mvcflash.core.nuspec
+++ b/mvcflash.core.nuspec
@@ -1,8 +1,8 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>MvcFlash.Core</id>
-        <version>2.0.1</version>
+        <version>2.1.0</version>
         <title>MvcFlash.Core</title>
         <authors>Khalid Abuhakmeh</authors>
         <owners>Khalid Abuhakmeh</owners>
@@ -12,11 +12,11 @@
         <tags>Flash, Mvc</tags>
         <dependencies>
             <group targetFramework=".NETFramework4.0">
-                <dependency id="Microsoft.AspNet.Mvc" version="4.0.20710.0"/>
+                <dependency id="Microsoft.AspNet.Mvc" version="4.0.20710.0" />
             </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="MvcFlash.Core\bin\Release\MvcFlash.Core.dll" target="lib\net40\MvcFlash.Core.dll"/>
+        <file src="MvcFlash.Core\bin\Release\MvcFlash.Core.dll" target="lib\net40\MvcFlash.Core.dll" />
     </files>
 </package>
